--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "file": "^0.2.2",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^5.12.6",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "node": "^16.1.0",
     "nodemon": "^2.0.7",
+    "upload": "^1.1.1",
     "validator": "^13.6.0"
   }
 }
