--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "file": "^0.2.2",
     "gridfs-stream": "^1.1.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.12.6",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
