--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "moneystone-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "engines": {
+    "node": "16.1.0"
+  },
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
